2009-03-07  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 3.1.54.
	(OCTAVE_API_VERSION): Now api-v36.
	(OCTAVE_RELEASE_DATE): Now 2009-03-07.

	* octave.cc (verbose_usage): Include --doc-cache-file in option list.

2009-03-06  Jaroslav Hajek  <highegg@gmail.com>

	* ov.h (octave_value::diag_matrix_value,
	octave_value::complex_diag_matrix_value,
	octave_value::float_diag_matrix_value,
	octave_value::float_complex_diag_matrix_value,
	octave_value::perm_matrix_value): New methods.

	* ov-base.cc (octave_base_value::diag_matrix_value,
	octave_base_value::complex_diag_matrix_value,
	octave_base_value::float_diag_matrix_value,
	octave_base_value::float_complex_diag_matrix_value,
	octave_base_value::perm_matrix_value): New virtual methods.
	
	* ov-base.h: Declare them.

	* ov-base-diag.h (octave_base_diag::diag_matrix_value,
	octave_base_diag::complex_diag_matrix_value,
	octave_base_diag::float_diag_matrix_value,
	octave_base_diag::float_complex_diag_matrix_value,
	octave_base_diag::perm_matrix_value): Remove declarations.

	* DLD-FUNCTIONS/inv.cc (Finv): Simplify handling diag & perm matrices.
	* DLD-FUNCTIONS/pinv.cc (Fpinv): Ditto.
	* DLD-FUNCTIONS/det.cc (Fdet): Ditto.

2009-03-05  Jaroslav Hajek  <highegg@gmail.com>
	
	* ls-hdf5.cc (add_hdf5_data): Handle diag & perm matrices.

2009-03-05  John W. Eaton  <jwe@octave.org>

	* pt-cell.cc, pt-cell.h (tree_cell::dup): Now const.
	* comment-list.cc, comment-list.h (octave_comment_list::dup): Ditto.
	* pt-arg-list.cc, pt-arg-list.h (tree_argument_list::dup): Ditto.
	* pt-assign.cc, pt-assign.h (tree_simple_assignment::dup,
	tree_multi_assignment::dup): Ditto.
	* pt-binop.cc, pt-binop.h (tree_binary_expression::dup,
	tree_boolean_expression::dup): Ditto.
	* pt-cmd.cc, pt-cmd.h (tree_no_op_command::dup,
	tree_function_def::dup): Ditto.
	* pt-colon.cc, pt-colon.h (tree_colon_expression::dup): Ditto.
	* pt-const.cc, pt-const.h (tree_constant::dup): Ditto.